# impact-ledger

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: cdfi_portfolio_demo.ipynb
impactledger/: __init__.py
impactledger/data/: schema.py
impactledger/models/: investment.py  portfolio.py  report.py
tests/: conftest.py  test_portfolio.py  test_report.py  test_schema.py
