[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-ledger"
version = "0.1.0"
description = "Open source impact investment portfolio tracker for CDFIs, private debt, and community development finance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/impact-ledger"
